--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,5 @@
 services:
   - type: web
-    name: hr-dashboard
+    name: hrchecker
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python server.py
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
-
+    startCommand: python3 server.py
